tests/miniJava/neg/006108_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { System.out.println System.out.println { } ) ; } }
